--- a/Geekfest2023TechAlert/TechAlertChatBot/MainWindow.xaml
+++ b/Geekfest2023TechAlert/TechAlertChatBot/MainWindow.xaml
@@ -1,15 +1,16 @@
-﻿<Window x:Class="TechAlertChatBot.MainWindow"
+﻿<Window x:Name="chatBot" 
+        x:Class="TechAlertChatBot.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TechAlertChatBot"
         mc:Ignorable="d"
-        Title="MainWindow" Height="800" Width="700">
+        Title="Tech Alert Chat" Height="600" Width="400">
     <Grid>
-        <TextBox HorizontalAlignment="Center" Margin="0,10,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="680" Height="640"/>
-        <TextBox HorizontalAlignment="Left" Margin="10,692,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="550" Height="57"/>
-        <Button Content="Send" HorizontalAlignment="Left" Margin="579,692,0,0" VerticalAlignment="Top" Height="57" Width="111"/>
+        <TextBox x:Name="chatBox" HorizontalAlignment="Left" Margin="10,24,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="363" Height="446" FontSize="24" Background="{x:Null}" BorderThickness="0,0,0,1"/>
+        <TextBox x:Name="msgBox" HorizontalAlignment="Left" Margin="10,488,0,0" TextWrapping="Wrap" Background="Transparent" Opacity="0.5" Text="Enter your message..." VerticalAlignment="Top" Width="247" Height="58" FontSize="16" TextChanged="msgBox_TextChanged"/>
+        <Button Content="Send" HorizontalAlignment="Left" Margin="262,489,0,0" VerticalAlignment="Top" Height="57" Width="111" FontSize="16"/>
 
     </Grid>
 </Window>
